# TPE

./: README.md  TPE.cabal  stack.yaml
app/: Main.hs
src/: TPE.hs
src/TPE/: Gen.hs  Plateau.hs  Prelude.hs  Types.hs
src/TPE/Plateau/: Manips.hs
test/: Spec.hs
